<resources>
    <string name="app_name">106590046_HW6_2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="text_Donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="text_Icecream_Sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="text_Froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string-array name="phoneLabelArray">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="nameLabelText">Name</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="addressLabelText">Address</string>
    <string name="addressHint">Enter Address</string>
    <string name="phoneHint">Enter Phone</string>
    <string name="phoneLabelText">Phone</string>
    <string name="noteLabelText">Note</string>
    <string name="noteHint">Enter Note</string>
    <string name="deliveryLabelText">Choose a Delivery Method:</string>
    <string name="sameDayText">Same Day Messenger Service</string>
    <string name="nextDayText">Next day ground delivery</string>
    <string name="pickupText">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_status">Status</string>
    <string name="action_order">Order</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="dateBtnText">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datePicker">datePicker</string>
    <string name="date">\Date: \</string>

</resources>